[tool.poetry]
name = "cthulhu-himself"
version = "0.1.0"
description = ""
authors = ["svalous <bluepower912@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dnspython = "^1.16.0"
PyNaCl = "^1.3.0"
"discord.py" = "^1.7.2"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1.4.15"
pandas = "^1.2.4"
python-dotenv = "^0.18.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
